# fbide

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitattributes  .gitignore  .gitmodules  .travis.yml  ASSETS-LICENSE.md  AUTO_INDENT_PLAN.md  CMakeLists.txt  CODE_TRANSFORMER_PLAN.md  Doxyfile.in  ENCODING_EOL_PLAN.md  FBIde.sln  KEYWORD_CATEGORIZATION_TODO.md  KEYWORD_GROUPS.md  LEXER_UNIFICATION_PLAN.md  LEXER_UNIFICATION_TODO.md  LICENSE  README.md  app.vcxproj  change-log.md  changes.md  cpp.hint  docs-plan-ci.md  docs-plan-locales.md  docs-plan.md  docs-todos.md  fbide-0.4.6-changes.txt  fbide-Info.plist  fbide.cbp  fbide.depend  fbide.layout  fbide.sln  fbide.vcxproj  fbide.workspace  fbide.workspace.layout  formatter_plan.md  formatter_preserve_plan.md  (+5 more)
fblexer/: CMakeLists.txt  fblexer.cbp  fblexer.layout  fblexer.vcxproj  lexer.cpp  lexer.hpp  module.cpp  module.hpp
fblexer/fblexer.xcodeproj/: project.pbxproj
fblexer/scintilla/: CMakeLists.txt
fblexer/sdk/: LexerSdk.hpp
src/: AboutDialog.cpp  App.cpp  CMakeLists.txt  CmdManager.cpp  CmdManager.hpp  Config.cpp  Config.hpp  ConfigManager.cpp  ConfigManager.hpp  ConfigManager.out.cpp  Document.cpp  Document.hpp  Editor.cpp  Editor.hpp  EditorDocument.cpp  EditorDocument.hpp  FBIdeApp.cpp  FBIdeMainFrame.cpp  FBLexer.cpp  FBLexer.hpp  FormatDialog.cpp  IArtProvider.hpp  InstanceHandler.cpp  MainWindow.cpp  MainWindow.hpp  Manager.cpp  Manager.h  Manager.hpp  MenuHandler.cpp  MenuHandler.hpp  StandardArtProvider.cpp  StandardArtProvider.hpp  StyledEditor.cpp  StyledEditor.hpp  ToolbarHandler.cpp  ToolbarHandler.hpp  TypeManager.cpp  TypeManager.hpp  UiManager.cpp  UiManager.hpp  (+24 more)
src/App/: App.cpp  App.hpp  Manager.cpp  Manager.hpp
src/Config/: Config.cpp  Config.hpp  ConfigManager.cpp  ConfigManager.hpp  StyleEntry.cpp  StyleEntry.hpp
src/Document/: Document.cpp  Document.hpp  DocumentManager.cpp  DocumentManager.hpp  TypeManager.cpp  TypeManager.hpp
src/Editor/: Document.cpp  Document.hpp  EditorDocument.cpp  EditorDocument.hpp  StyledEditor.cpp  StyledEditor.hpp  TextDocument.cpp  TextDocument.hpp  TypeManager.cpp  TypeManager.hpp
src/FB/: Defaults.hpp  FBEditor.cpp  FBEditor.hpp  SourceLexer.hpp
src/FB/Parser/: SourceLexer.cpp  SourceLexer.hpp  SymbolTable.cpp  SymbolTable.hpp  Token.cpp  Token.hpp
src/Log/: LogManager.cpp  LogManager.hpp
src/Sdk/: LexerInterface.cpp  LexerInterface.h
src/UI/: CmdManager.cpp  CmdManager.hpp  IArtProvider.cpp  IArtProvider.hpp  MainWindow.cpp  MainWindow.hpp  MenuHandler.cpp  MenuHandler.hpp  PanelHandler.cpp  PanelHandler.hpp  StandardArtProvider.cpp  StandardArtProvider.hpp  ToolbarHandler.cpp  ToolbarHandler.hpp  UiManager.cpp  UiManager.hpp
src/UI/xpm/: about.xpm  add.xpm  addbook.xpm  addsrc.xpm  arricon.xpm  bughlp.xpm  close.xpm  closefl.xpm  clrhist.xpm  compile.xpm  compopt.xpm  compres.xpm  comprun.xpm  copy.xpm  cut.xpm  debug.xpm  dos.xpm  empty.xpm  envopt.xpm  explor.xpm  export.xpm  gobook.xpm  help.xpm  homepg.xpm  icon.xpm  insert.xpm  makefl.xpm  minall.xpm  newproj.xpm  newsrc.xpm  newtemp.xpm  next.xpm  openproj.xpm  opnproj.xpm  package.xpm  packman.xpm  paste.xpm  prev.xpm  print.xpm  projopt.xpm  (+20 more)
src/inc/: AboutDialog.h  FBIde0.4_private.h  FBIdeApp.h  FBIdeMainFrame.h  FormatDialog.h  InstanceHandler.h  browser.h  buffer.h  bufferlist.h  configdiag.h  fbedit.h  globals.h  main.h  pch.h  wxmynotebook.h
src/lib/: CMakeLists.txt  pch.hpp
src/lib/about/: AboutDialog.cpp  AboutDialog.hpp
src/lib/ai/: AiChatPanel.cpp  AiChatPanel.hpp  AiContext.cpp  AiContext.hpp  AiManager.cpp  AiManager.hpp  AiManagerRegistry.cpp  AiManagerRegistry.hpp  AiProvider.hpp  AiTypes.cpp  AiTypes.hpp  AnthropicProvider.cpp  AnthropicProvider.hpp  ClaudeCliProvider.cpp  ClaudeCliProvider.hpp  ContextTagBar.cpp  ContextTagBar.hpp  GeminiProvider.cpp  MockProvider.cpp  OllamaProvider.cpp  OllamaProvider.hpp  (+6 more)
src/rc/: FBIde0.4.exe.Manifest  FBIde0.4_private.rc  RCa13392  app.rc  icons.hpp  toolbar.rc
src/wxstc/: gen_iface.py  stc.cpp  stc.h.in
src/xpm/: about.xpm  addsrc.xpm  clsall.xpm  colours.xpm  compile.xpm  comprun.xpm  empty.xpm  help.xpm  homepg.xpm  projopt.xpm  rebuild.xpm  remsrc.xpm  save.xpm  srchrep.xpm  tile.xpm  toolbar.xpm  tools.xpm  undo.xpm  update.xpm
tests/: AutoIndentTests.cpp  BasicTests.cpp  CMakeLists.txt  CompileCommandTests.cpp  ConfigTests.cpp  DocumentIOTests.cpp  EditorTestShim.hpp  EditorTests.cpp  EncodingDetectorTests.cpp  FBSciLexerTests.cpp  FormatRendererTests.cpp  FormatScannerTests.cpp  FormatTreeBuilderTests.cpp  KeywordsTests.cpp  LangTests.cpp  LexerTests.cpp  ReFormatterTests.cpp  ReindentTests.cpp  RunCommandTests.cpp  StyleLexerTests.cpp  SymbolTableTests.cpp  TestHelpers.hpp  TextEncodingTests.cpp  ThemeTests.cpp  main.cpp  uimain.cpp
tests/data/: fbfull.lng  flappyfb.bas  obsidian.fbt  prefs.ini
tests/ui/: EditorChangeMarginTests.cpp  EditorPerfTests.cpp  EditorTestShim.hpp  EditorTests.cpp  MarkdownViewTests.cpp  manifest.rc  uimain.cpp
tests/unit/: AiContextTests.cpp  AiTypesTests.cpp  AnthropicProviderTests.cpp  ApplyPatchToolTests.cpp  AutoIndentTests.cpp  ChatImageCacheTests.cpp  ChatLayoutTests.cpp  CodeHighlighterTests.cpp  CompileCommandTests.cpp  CompileToolTests.cpp  CompilerConfigCatalogTests.cpp  ConfigManagerTests.cpp  ConfigStrategyTests.cpp  DocumentIOTests.cpp  DocumentPathTests.cpp  FBSciLexerTests.cpp  FbcAutoDetectTests.cpp  FbcDefinesTests.cpp  GeminiProviderTests.cpp  LineHistoryTests.cpp  LmStudioProviderTests.cpp  MarkdownDocumentTests.cpp  MarkdownImageCacheTests.cpp  MarkdownLayoutTests.cpp  MarkdownSelectionTests.cpp  MarkdownTestFixtures.hpp  MarkdownTests.cpp  MockProviderTests.cpp  OllamaProviderTests.cpp  PatchTests.cpp  PpConditionalTests.cpp  ProjectTests.cpp  ProviderFactoryTests.cpp  ReFormatterTests.cpp  ReadFileToolTests.cpp  SourceGraphTests.cpp  StreamParsersTests.cpp  StyleLexerTests.cpp  SymbolBrowserFilterTests.cpp  SymbolTableTests.cpp  (+10 more)
wxSTC/: CMakeLists.txt
wxSTC/include/: stc.h
wxSTC/src/: PlatWX.cpp  PlatWX.h  ScintillaWX.cpp  ScintillaWX.h  stc.cpp
(+650 files in other folders)
